--- a/HireRight/Content/styles.css
+++ b/HireRight/Content/styles.css
@@ -6038,17 +6038,7 @@ a, a:visited {
     overflow: hidden !important; }
   ul.nav.navbar-nav > li {
     width: 100%;
-    font-size: 18pt !important; }
-  .logo {
-    cursor: pointer;
-    max-width: 1000px;
-    margin-right: 100px; }
-    .logo img {
-      max-width: 100%;
-      height: 50px;
-      margin: 0;
-      background-color: transparent;
-      border: none; } }
+    font-size: 18pt !important; } }
 
 /*$site_background: $white;
 $site_side_background: $white;
@@ -7679,12 +7669,13 @@ $submit_button_color: $green-theme-side-magenta-base;*/
 
 .importanceHeaders {
   border-bottom: 3px solid black;
-  margin-bottom: 0.5em; }
+  margin-bottom: 0.5em;
+  clear: both; }
   .importanceHeaders h4 {
     text-align: center; }
 
 .industryToggle {
-  margin: 0.5em 1em;
+  margin: 5px;
   padding: 0.25em 1em;
   width: auto;
   border: 2px solid black;
@@ -7692,8 +7683,6 @@ $submit_button_color: $green-theme-side-magenta-base;*/
   cursor: pointer;
   float: left;
   background-color: #5cc311; }
-  .industryToggle.generalIndustryToggle {
-    margin-right: 1.5em; }
   .industryToggle:hover {
     background-color: #4d79ff; }
   .industryToggle span {
@@ -7709,5 +7698,5 @@ $submit_button_color: $green-theme-side-magenta-base;*/
   position: sticky;
   z-index: 5;
   background-color: #ffffff;
-  top: 52px; }
+  top: 50px; }
 
